# bhook

./: .gitignore  CLEANUP_SUMMARY.md  PERF_TEST_COMPLETE.md  run_sohook_tests.bat  settings.gradle
bytehook_sample/: build.gradle
bytehook_sample/src/main/: AndroidManifest.xml
bytehook_sample/src/main/cpp/: CMakeLists.txt  hacker.c  sample.cpp  sample.h
bytehook_sample/src/main/java/com/bytedance/android/bytehook/sample/: MainActivity.java  MyCustomApplication.java  NativeHacker.java  SoHookTestActivity.java  SoHookWebTestActivity.java
bytehook_sample/src/main/res/layout/: activity_main.xml  activity_sohook_test.xml  activity_sohook_web_test.xml
sohook/: ACCURACY_TESTING.md  ATOMIC_OPTIMIZATION.md  BACKTRACE_FEATURE.md  FINAL_PERFORMANCE_SUMMARY.md  HASH_OPTIMIZATION_DONE.md  HASH_TABLE_OPTIMIZATION.md  PERF_QUICK_START.md  PERF_TEST_FINAL.md  PERF_TEST_REFACTOR.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  TEST_GUIDE.md  TEST_ISOLATION.md  USAGE_EXAMPLE.md  WORK_COMPLETED.md  build.gradle
sohook-web/: FRAMEWORK_SELECTION.md  README.md  index.html  package-lock.json  package.json
sohook-web/docs/: DEMO_GUIDE.md  FEATURE_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PROJECT_OVERVIEW.md  QUICK_OPTIMIZATION.md  QUICK_START_WEB_MONITOR.md  README_MONITOR.md  TASK_COMPLETION_SUMMARY.md  WEB_MONITOR_COMPLETE.md  WEB_SERVER_USAGE.md
sohook-web/src/: App.tsx
sohook-web/src/components/: ConnectionStatus.tsx  FdLeaksList.tsx  FdStatsCard.tsx  LeaksList.tsx  MemoryChart.tsx  MemoryStatsCard.tsx
sohook-web/src/components/ui/: badge.tsx  card.tsx
sohook-web/src/lib/: utils.ts
sohook-web/src/pages/: Dashboard.tsx
sohook-web/src/services/: api.ts
sohook-web/src/store/: useMemoryStore.ts
sohook-web/src/types/: index.ts
sohook/docs/: ACCURACY_TESTING.md  FINAL_PERFORMANCE_SUMMARY.md  INTEGRATION_SUMMARY.md  LAZY_STATS_OPTIMIZATION.md  MEMORY_POOL_OPTIMIZATION.md  OPTIMIZATION_ANALYSIS.md  PERFORMANCE_TEST.md  PERF_QUICK_START.md  PERF_TEST_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  SYMBOL_RESOLUTION.md  WORK_COMPLETED.md
sohook/src/androidTest/cpp/: CMakeLists.txt  test_fd.c  test_fd.h  test_fd_jni.c  test_memory.c  test_memory.h  test_memory_cpp.cpp  test_memory_cpp.h  test_memory_cpp_jni.c  test_memory_jni.c
sohook/src/androidTest/java/com/sohook/: ExampleInstrumentedTest.java  SoHookAccuracyTest.java  SoHookBasicTest.java  SoHookCallocTest.java  SoHookCppTest.java  SoHookErrorHandlingTest.java  SoHookFdLeakTest.java  SoHookLeakJsonTest.java  SoHookMemoryLeakTest.java  SoHookStressTest.java  SoHookTestSuite.java  TEST_INDEX.md  TestMemoryHelper.java
sohook/src/androidTest/java/com/sohook/test/: TestFd.java  TestMemoryCpp.java  TestMemoryHelper.java
sohook/src/main/: AndroidManifest.xml
sohook/src/main/cpp/: CMakeLists.txt  backtrace.c  backtrace.h  fd_tracker.c  fd_tracker.h  leak_json.c  leak_json.h  leak_report.c  leak_report.h  memory_hash_table.c  memory_hash_table.h  memory_pool.c  memory_pool.h  memory_stats.c  memory_stats.h  memory_tracker.c  memory_tracker.h  sohook_jni.c
sohook/src/main/java/com/sohook/: SoHook.java  SoHookWebManager.java  SoHookWebServer.java
sohook/src/main/res/values/: strings.xml  themes.xml
sohook/src/main/res/values-night/: themes.xml
sohook/src/test/java/com/sohook/: ExampleUnitTest.java
